Resolve issue #72 enable file:// mode of transferring files to galaxy. bypass security issue.

--- a/setup/config/galaxy.ini
+++ b/setup/config/galaxy.ini
@@ -28,6 +28,7 @@ tool_config_file = config/tool_conf.xml.sample,config/shed_tool_conf.xml,config/
 use_nglims = False
 nglims_config_file = tool-data/nglims.yaml
 use_interactive = True
+allow_path_paste = True
 
 # email addresses of admin users (users must be regsitered)
 #admin_users = admin@usegalaxy.org
